fixed index page news spacing

--- a/src/compass/sass/components/_button.scss
+++ b/src/compass/sass/components/_button.scss
@@ -88,7 +88,7 @@ a {
 }
 
 .btn-inverted {
-    margin: 20px auto 16px auto;
+    margin: 0 auto;
     
     color: #fff;
     background-color: $skyway-blue;
