--- a/src/compass/sass/pages/_index.scss
+++ b/src/compass/sass/pages/_index.scss
@@ -155,9 +155,7 @@
 /* Front Page - News */
 
 .mini-headline {
-    margin-top: 15px;
-    margin-bottom: 35px;
-    
+    margin: 30px 0px;
 }
 
 .mini-headline-date {
