--- a/src/compass/stylesheets/styles.css
+++ b/src/compass/stylesheets/styles.css
@@ -12994,7 +12994,7 @@ a {
 
 /* line 90, ../sass/components/_button.scss */
 .btn-inverted {
-  margin: 20px auto 16px auto;
+  margin: 0 auto;
   color: #fff;
   background-color: #5285FF;
 }
@@ -13995,11 +13995,10 @@ a {
 /* Front Page - News */
 /* line 157, ../sass/pages/_index.scss */
 .mini-headline {
-  margin-top: 15px;
-  margin-bottom: 35px;
+  margin: 30px 0px;
 }
 
-/* line 163, ../sass/pages/_index.scss */
+/* line 161, ../sass/pages/_index.scss */
 .mini-headline-date {
   float: right;
   margin-bottom: 8px;
@@ -14016,7 +14015,7 @@ a {
   border-radius: 5px;
 }
 
-/* line 182, ../sass/pages/_index.scss */
+/* line 180, ../sass/pages/_index.scss */
 .mini-headline-text {
   margin-left: -10px;
   font-size: 1.3em;
@@ -14026,31 +14025,31 @@ a {
 
 /* Medium Devices, Desktops */
 @media (max-width: 992px) {
-  /* line 194, ../sass/pages/_index.scss */
+  /* line 192, ../sass/pages/_index.scss */
   .highlight br {
     display: none;
   }
 }
 /* Portrait phones and smaller */
 @media (max-width: 768px) {
-  /* line 202, ../sass/pages/_index.scss */
+  /* line 200, ../sass/pages/_index.scss */
   .highlight {
     text-align: center;
     height: 170px;
   }
-  /* line 206, ../sass/pages/_index.scss */
+  /* line 204, ../sass/pages/_index.scss */
   .highlight i {
     font-size: 3em;
   }
 
-  /* line 211, ../sass/pages/_index.scss */
+  /* line 209, ../sass/pages/_index.scss */
   .mini-headline-date {
     float: none;
     margin-left: 15px;
     width: 100px;
   }
 
-  /* line 220, ../sass/pages/_index.scss */
+  /* line 218, ../sass/pages/_index.scss */
   .mini-headline-text {
     margin: 0;
   }
